--- a/app/src/main/res/layout/activity_detail_movie.xml
+++ b/app/src/main/res/layout/activity_detail_movie.xml
@@ -10,84 +10,134 @@
             type="com.pratamawijaya.popularmovieudacity.data.model.Movie" />
     </data>
 
-    <ScrollView
+    <android.support.design.widget.CoordinatorLayout
         android:layout_width="match_parent"
-        android:layout_height="match_parent">
+        android:layout_height="match_parent"
+        android:background="#fff"
+        android:fitsSystemWindows="true">
 
-
-        <RelativeLayout
+        <android.support.design.widget.AppBarLayout
+            android:id="@+id/appBarLayout"
             android:layout_width="match_parent"
-            android:layout_height="wrap_content">
+            android:layout_height="300dp"
+            android:fitsSystemWindows="true"
+            android:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar">
 
-            <ImageView
-                android:id="@+id/img_backdrop"
+            <android.support.design.widget.CollapsingToolbarLayout
+                android:id="@+id/collapsingToolbar"
                 android:layout_width="match_parent"
-                android:layout_height="200dp"
-                android:adjustViewBounds="true"
-                android:contentDescription="@string/img_desc_backdrop"
-                android:cropToPadding="true"
-                android:scaleType="centerCrop"
-                app:backdropURL="@{movie.backdrop_path}" />
+                android:layout_height="match_parent"
+                android:fitsSystemWindows="true"
+                app:contentScrim="?attr/colorPrimary"
+                app:expandedTitleMarginEnd="64dp"
+                app:expandedTitleMarginStart="48dp"
+                app:layout_scrollFlags="scroll|exitUntilCollapsed">
 
-            <ImageView
-                android:id="@+id/poster"
-                android:layout_width="100dp"
-                android:layout_height="150dp"
-                android:layout_marginLeft="16dp"
-                android:layout_marginStart="16dp"
-                android:layout_marginTop="172dp"
-                android:contentDescription="@string/img_desc_poster_movie"
-                app:posterURL="@{movie.poster_path}"
-                tools:src="@mipmap/ic_launcher" />
+                <ImageView
+                    android:id="@+id/img_backdrop"
+                    android:layout_width="match_parent"
+                    android:layout_height="match_parent"
+                    android:adjustViewBounds="true"
+                    android:contentDescription="@string/img_desc_backdrop"
+                    android:cropToPadding="true"
+                    android:fitsSystemWindows="true"
+                    android:scaleType="centerCrop"
+                    app:backdropURL="@{movie.backdrop_path}"
+                    app:layout_collapseMode="parallax" />
 
-            <TextView
-                android:id="@+id/tv_title"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_below="@id/img_backdrop"
-                android:layout_marginLeft="16dp"
-                android:layout_marginTop="16dp"
-                android:layout_toRightOf="@id/poster"
-                android:fontFamily="sans-serif-medium"
-                android:text="@{movie.title}"
-                android:textSize="18sp"
-                tools:text="title" />
+                <android.support.v7.widget.Toolbar
+                    android:id="@+id/toolbar"
+                    android:layout_width="match_parent"
+                    android:layout_height="?actionBarSize"
+                    app:layout_collapseMode="pin" />
+            </android.support.design.widget.CollapsingToolbarLayout>
 
-            <TextView
-                android:id="@+id/tv_release_date"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_below="@id/tv_title"
-                android:layout_marginStart="16dp"
-                android:layout_marginTop="8dp"
-                android:layout_toRightOf="@id/poster"
-                android:text="@{movie.getFormattedDate()}"
-                tools:text="Release Date : " />
+        </android.support.design.widget.AppBarLayout>
 
-            <TextView
-                android:id="@+id/tv_rating"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_below="@id/tv_release_date"
-                android:layout_marginEnd="16dp"
-                android:layout_marginStart="16dp"
-                android:layout_marginTop="8dp"
-                android:layout_toRightOf="@id/poster"
-                android:drawableLeft="@drawable/ic_star_yellow_900_24dp"
-                android:drawablePadding="8dp"
-                android:gravity="right|end|center_vertical"
-                android:text="@{String.valueOf(movie.vote_average)}"
-                tools:text="Rating" />
+        <ImageView
+            android:id="@+id/poster"
+            android:layout_width="130dp"
+            android:layout_height="180dp"
+            android:layout_marginLeft="16dp"
+            android:contentDescription="@string/img_desc_poster_movie"
+            app:layout_anchor="@id/appBarLayout"
+            app:layout_anchorGravity="bottom|left|start"
+            app:posterURL="@{movie.poster_path}"
+            tools:src="@mipmap/ic_launcher" />
 
-            <TextView
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_below="@id/poster"
-                android:layout_margin="16dp"
-                android:text="@{movie.overview}"
-                tools:text="Overview" />
+        <android.support.v4.widget.NestedScrollView
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            app:layout_behavior="@string/appbar_scrolling_view_behavior">
 
-        </RelativeLayout>
-    </ScrollView>
+            <RelativeLayout
+                android:layout_width="match_parent"
+                android:layout_height="match_parent">
+
+                <TextView
+                    android:id="@+id/tv_title"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_marginLeft="160dp"
+                    android:layout_marginTop="8dp"
+                    android:fontFamily="sans-serif-medium"
+                    android:text="@{movie.title}"
+                    android:textColor="#000"
+                    android:textSize="18sp"
+                    tools:text="title" />
+
+                <TextView
+                    android:id="@+id/tv_release_date"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_below="@id/tv_title"
+                    android:layout_marginLeft="160dp"
+                    android:layout_marginStart="160dp"
+                    android:layout_marginTop="8dp"
+                    android:text="@{movie.getFormattedDate()}"
+                    android:textColor="#000"
+                    tools:text="Release Date : " />
+
+                <TextView
+                    android:id="@+id/tv_rating"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_below="@id/tv_release_date"
+                    android:layout_marginEnd="16dp"
+                    android:layout_marginLeft="160dp"
+                    android:layout_marginStart="160dp"
+                    android:layout_marginTop="8dp"
+                    android:drawableLeft="@drawable/ic_star_yellow_900_24dp"
+                    android:drawablePadding="8dp"
+                    android:gravity="right|end|center_vertical"
+                    android:text="@{String.valueOf(movie.vote_average)}"
+                    android:textColor="#000"
+                    tools:text="Rating" />
+
+                <View
+                    android:id="@+id/line"
+                    android:layout_width="match_parent"
+                    android:layout_height="0.5dp"
+                    android:layout_below="@id/tv_rating"
+                    android:layout_marginLeft="16dp"
+                    android:layout_marginRight="16dp"
+                    android:layout_marginTop="16dp"
+                    android:background="#000" />
+
+                <TextView
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_below="@id/line"
+                    android:layout_margin="16dp"
+                    android:fontFamily="sans-serif-light"
+                    android:text="@{movie.overview}"
+                    android:textColor="#000"
+                    tools:text="Overview" />
+            </RelativeLayout>
+
+        </android.support.v4.widget.NestedScrollView>
+
+
+    </android.support.design.widget.CoordinatorLayout>
 
 </layout>
